@@ -41,6 +41,7 @@ lib/npg_pipeline/executor/options.pm
 lib/npg_pipeline/executor/wr.pm
 lib/npg_pipeline/function/autoqc.pm
 lib/npg_pipeline/function/autoqc_archiver.pm
+lib/npg_pipeline/function/bqsr_calc.pm
 lib/npg_pipeline/function/cache_merge_component.pm
 lib/npg_pipeline/function/cluster_count.pm
 lib/npg_pipeline/function/current_analysis_link.pm
@@ -108,6 +109,7 @@ t/15-product-release.t
 t/20-function-autoqc.t
 t/20-function-autoqc_archiver.t
 t/20-function-cache_merge_component.t
+t/20-function-bqsr_calc.t
 t/20-function-cluster_count.t
 t/20-function-current_analysis_link.t
 t/20-function-definition.t
@@ -1045,7 +1047,10 @@ t/data/qc_outcomes/fixtures/400-mqc_library_outcome_ent.yml
 t/data/qc_outcomes/fixtures/README
 t/data/release/config/archive_off/product_release.yml
 t/data/release/config/archive_on/product_release.yml
+t/data/release/config/bqsr/product_release.yml
+t/data/release/config/bqsr_off/product_release.yml
 t/data/release/config/default_s3_archival/product_release.yml
+t/data/release/config/empty_default/product_release.yml
 t/data/release/config/haplotype_caller_on/product_release.yml
 t/data/release/config/haplotype_caller_on_study_specific/product_release.yml
 t/data/release/config/multiple_configs/product_release.yml
