@@ -1,0 +1,7 @@
+---
+default:
+  bqsr:
+    enable: true
+    known-sites:
+      - dbsnp_138.hg38
+      - Mills_and_1000G_gold_standard.indels.hg38
