@@ -1,0 +1,4 @@
+---
+default:
+  bqsr:
+    enable: false
