@@ -3,6 +3,7 @@ LIST OF CHANGES
 
  - add function to support GATK HaplotypeCaller
  - add function to concat and recompress gVCFs
+ - add function to calculate BQSR table
 
 release 56.1.0
  - move reference cache from seq_alignment to own singleton class
